--- a/turnjs4/index.html
+++ b/turnjs4/index.html
@@ -10,9 +10,9 @@
 <div class="flipbook-viewport">
 	<div class="container">
 		<div class="flipbook">
-			<div class="page" style="background-image:url(assets/images/cover.jpeg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page1.jpg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page2.jpg)"></div>
+			<div class="page" style="background-image:url(assets/images/cover.jpeg);"></div>
+			<div class="single" style="background-image:url(assets/images/Page1.jpg)"></div>
+			<div class="single" style="background-image:url(assets/images/Page2.jpg)"></div>
 			<div class="double" style="background-image:url(assets/images/Page3.jpg)"></div>
 			<div class="double" style="background-image:url(assets/images/Page4.jpg)"></div>
 			<div class="double" style="background-image:url(assets/images/Page5.jpg)"></div>
