--- a/turnjs4/index.html
+++ b/turnjs4/index.html
@@ -13,11 +13,11 @@
 			<div class="page" style="background-image:url(assets/images/cover.jpeg);"></div>
 			<div class="single" style="background-image:url(assets/images/Page1.jpg)"></div>
 			<div class="single" style="background-image:url(assets/images/Page2.jpg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page3.jpg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page4.jpg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page5.jpg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page6.jpg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page7.jpg)"></div>
+			<div class="double" style="background-image:url(assets/images/Page3.jpg);margin-top:100px"></div>
+			<div class="double" style="background-image:url(assets/images/Page4.jpg);margin-top:100px"></div>
+			<div class="double" style="background-image:url(assets/images/Page5.jpg);margin-top:100px"></div>
+			<div class="double" style="background-image:url(assets/images/Page6.jpg);margin-top:100px"></div>
+			<div class="double" style="background-image:url(assets/images/Page7.jpg);margin-top:100px"></div>
 		</div>
 	</div>
 </div>
