--- a/turnjs4/index.html
+++ b/turnjs4/index.html
@@ -1,98 +1,73 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width = 1050, user-scalable = no" />
-<script type="text/javascript" src="assets/extras/jquery.min.1.7.js"></script>
-<script type="text/javascript" src="assets/extras/modernizr.2.5.3.min.js"></script>
+    <meta name="viewport" content="width = 1050, user-scalable = no"/>
+    <script type="text/javascript" src="assets/extras/jquery.min.1.7.js"></script>
+    <script type="text/javascript" src="assets/extras/modernizr.2.5.3.min.js"></script>
 </head>
 <body>
 
 <div class="flipbook-viewport">
-	<div class="container">
-		<div class="flipbook">
-			<div class="page" style="background-image:url(assets/images/cover.jpeg);"></div>
-			<div class="single" style="background-image:url(assets/images/Page1.jpg)"></div>
-			<div class="single" style="background-image:url(assets/images/Page2.jpg)"></div>
-			<div class="double" style="background-image:url(assets/images/Page3.jpg);margin-top:100px"></div>
-			<div class="double" style="background-image:url(assets/images/Page4.jpg);margin-top:100px"></div>
-			<div class="double" style="background-image:url(assets/images/Page5.jpg);margin-top:100px"></div>
-			<div class="double" style="background-image:url(assets/images/Page6.jpg);margin-top:100px"></div>
-			<div class="double" style="background-image:url(assets/images/Page7.jpg);margin-top:100px"></div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="flipbook">
+            <div class="page" style="background-image:url(assets/images/cover.jpeg);"></div>
+            <div class="single" style="background-image:url(assets/images/Page1.jpg)"></div>
+            <div class="single" style="background-image:url(assets/images/Page2.jpg)"></div>
+            <div class="single" style="background-image:url(assets/images/page3-1.png)"></div>
+            <div class="single" style="background-image:url(assets/images/page3-2.png)"></div>
+            <div class="single" style="background-image:url(assets/images/Page4-1.png);"></div>
+            <div class="single" style="background-image:url(assets/images/Page4-2.png);"></div>
+            <div class="single" style="background-image:url(assets/images/Page5-1.png);"></div>
+            <div class="single" style="background-image:url(assets/images/Page5-2.png);"></div>
+            <div class="single" style="background-image:url(assets/images/Page6-1.png);"></div>
+            <div class="single" style="background-image:url(assets/images/Page6-2.png);"></div>
+            <div class="single" style="background-image:url(assets/images/Page7-1.png);"></div>
+            <div class="single" style="background-image:url(assets/images/Page7-2.png);"></div>
+        </div>
+    </div>
 </div>
 
 
 <script type="text/javascript">
 
-function loadApp() {
+    function loadApp() {
 
-	var flipbook = $('.flipbook');
+        var flipbook = $('.flipbook');
 
- 	// Check if the CSS was already loaded
-	
-	if (flipbook.width()==0 || flipbook.height()==0) {
-		setTimeout(loadApp, 10);
-		return;
-	}
+        // Check if the CSS was already loaded
 
-	$('.flipbook .double').scissor();
+        if (flipbook.width() === 0 || flipbook.height() === 0) {
+            setTimeout(loadApp, 10);
+            return;
+        }
 
-	// Create the flipbook
+        $('.flipbook .double').scissor();
+        flipbook.turn({
+            elevation: 50,
+            autoCenter: true
+        });
+    }
 
-	$('.flipbook').turn({
-			// Elevation
-
-			elevation: 50,
-			
-			// Enable gradients
-
-			gradients: true,
-			
-			// Auto center this flipbook
-
-			autoCenter: true
-
-	});
-}
-
-$(window).ready(function() {
-		$('.flipbook').turn({
-			
-							// display: 'double',
-							acceleration: true,
-							// gradients: !$.isTouch,
-							// gradients:true,
-							elevation:50,
-							autoCenter: true,
-							when: {
-								turned: function(e, page) {
-									/*console.log('Current view: ', $(this).turn('view'));*/
-								}
-							}
-						});
-	});
-
-	// $('#magazine').turn('removePage', 6)
-	
-	$(window).bind('keydown', function(e){
-		
-		if (e.keyCode==37)
-			$('.flipbook').turn('previous');
-		else if (e.keyCode==39)
-			$('.flipbook').turn('next');
-			
-	});
-
-// Load the HTML4 version if there's not CSS transform
-
-yepnope({
-	test : Modernizr.csstransforms,
-	yep: ['assets/lib/turn.min.js'],
-	nope: ['assets/lib/turn.html4.min.js'],
-	both: ['assets/lib/scissor.min.js', 'assets/css/double-page.css'],
-	complete: loadApp
-});
+    $(window).ready(function () {
+        $('.flipbook').turn({
+            acceleration: true,
+            elevation: 50,
+            autoCenter: true,
+        });
+    });
+    $(window).bind('keydown', function (e) {
+        if (e.keyCode === 37)
+            $('.flipbook').turn('previous');
+        else if (e.keyCode === 39)
+            $('.flipbook').turn('next');
+    });
+    yepnope({
+        test: Modernizr.csstransforms,
+        yep: ['assets/lib/turn.min.js'],
+        nope: ['assets/lib/turn.html4.min.js'],
+        both: ['assets/lib/scissor.min.js', 'assets/css/double-page.css'],
+        complete: loadApp
+    });
 
 </script>
 
